Adding, removing, and setting value of presents